beginnings of splash page and dagger injection service

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
+  <string name="owner">Elliot Mitchell</string>
   <string name="app_name">Umbrella</string>
+  <string name="cont">Continue</string>
 </resources>
