--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="owner">Elliot Mitchell</string>
+  <string name="owner">by Elliot Mitchell</string>
   <string name="app_name">Umbrella</string>
   <string name="cont">Continue</string>
   <string name="fahrenheit">Fahrenheit</string>
