--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
   <string name="cont">Continue</string>
   <string name="fahrenheit">Fahrenheit</string>
   <string name="celsius">Celsius</string>
+  <string name="loading">Loading…</string>
 </resources>
