adding home activity business logic around current ziplocation and more work on layout

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
   <string name="fahrenheit">Fahrenheit</string>
   <string name="celsius">Celsius</string>
   <string name="loading">Loading…</string>
+  <string name="clear">Clear</string>
+  <string name="overcast">Overcast</string>
 </resources>
