settings activity UI

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
   <string name="retry">Retry</string>
   <string name="today">Today</string>
   <string name="tomorrow">Tomorrow</string>
+  <string name="zip">Zip</string>
+  <string name="units">Units</string>
 </resources>
