poor alert dialogs, need to spend more time on styling

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
   <string name="tomorrow">Tomorrow</string>
   <string name="zip">Zip</string>
   <string name="units">Units</string>
+  <string name="cancel">Cancel</string>
+  <string name="ok">Ok</string>
 </resources>
